# M2_H14

./: README.md  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/versions/: 19246dc3dbe9_confirmed_email.py  1afa2bc8546c_init.py  50a1800cea0e_confirm_emal.py  67e9f50e89ad_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test.db  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
